<resources>
    <string name="app_name">FreshyZo</string>
    <string name="FreshyZo">FreshyZo</string>
    <string name="Home">Home</string>
    <string name="image">image</string>
    <string name="onboarding_image">onboarding_image</string>
    <string name="green_background">green_background</string>
    <string name="gif_image">gif_image</string>
    <string name="back_caps">BACK</string>
    <string name="next_caps">NEXT\ </string>
    <string name="skip_caps">SKIP</string>
    <string name="finish_caps">FINISH\ </string>
    <string name="title_ffs">Door-step delivery</string>
    <string name="sub_title_ffs">Get our freshly produced milk delivered quickly at your door-step.</string>
    <string name="title_fss">Subscription service</string>
    <string name="sub_title_fss">Subscribe and schedule deliveries for products you need everyday.</string>
    <string name="title_fts">Quality assurance</string>
    <string name="sub_title_fts">We are dedicated to provide you only the best-quality milk and milk products.</string>
    <string name="login_subtitle">Please login with your credentials</string>
    <string name="phone">Phone</string>
    <string name="phoneHint">Phone Number</string>
    <string name="otp">One-Time Password</string>
    <string name="otpHint">6 digit OTP</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="loginButton">loginButton</string>
    <string name="getOTP">Get OTP</string>
    <string name="full_name">Full Name</string>
    <string name="signup">Sign Up</string>
    <string name="signupButton">Sign up Button</string>
    <string name="no_account">Don\'t have an account?\ </string>
    <string name="have_account">Already have an account?\ </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="fill_details">Please fill your details to continue</string>
    <string name="freshyzo_login">FreshyZo Login</string>
    <string name="cow">Image of a black and white cow in the background\n</string>
    <string name="log_out">Log Out</string>
    <string name="cart">Cart</string>
    <string name="search_icon">Search Icon</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="hvs_item_text_1">Milk</string>
    <string name="hvs_item_text_2">Ghee</string>
    <string name="hvs_item_text_3">Buffalo Milk</string>
    <string name="hvs_item_text_4">Paneer</string>
    <string name="milk">Milk\ \ \ \ \ \ \  </string>
    <string name="cow_milk">FreshyZo Cow Milk</string>
    <string name="buffalo_milk">FreshyZo Buffalo Milk</string>
    <string name="paneer">FreshyZo Paneer</string>
    <string name="ghee">FreshyZo Desi Ghee</string>
    <string name="categories">Categories</string>
    <string name="popular_items">Popular Items</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity: %s</string>
    <string name="price_string">₹%1$s</string>
    <string name="buy_once">Buy Once</string>
    <string name="back_icon">Back Button</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="search">Search</string>
    <string name="product_image">Product Image</string>
    <string name="freshyzo_malai_dahi">FreshyZo Malai Dahi</string>
    <string name="mrp">MRP. ₹25/- </string>
    <string name="price_per_unit">(@₹100/kg)</string>
    <string name="selected_size">Selected Size - 250gm</string>
    <string name="quantity_selected">250 gm</string>
    <string name="_1_kg">1 kg</string>
    <string name="size_numbers">%1$s gm</string>
    <string name="product_details">Product Details</string>
    <string name="nutritional_value">Nutritional Value</string>
    <string name="product_desc">FreshyZo Malai Dahi is 100% natural dahi, containing no added preservatives or harmful chemicals.
        It is made out of rich and creamy milk, with profuse amount of malai to
        give it a smooth, mouth-melting, luscious texture.

        \n\nFreshyZo Malai Dahi comes in a sealed packaging, that is
        set just like homemade curd, offering you the best of taste
        and goodness without the hassles of preparing it at home.
    </string>
    <string name="nutrition_desc"><b>Each 100 gm of FreshyZo Malai Dahi contains: \n </b>
        \nEnergy 62kcal, Total Fat 4 gms,
        Saturated Fat 2.8 gms, Total Carbs 3 gms, Protein 3.5 gms, Vitamin A 162 mcg,
    Calcium 243 mg, Phosphorus 89 mg</string>
    <string name="subscribe">Subscribe</string>
    <string name="new_text">New</string>
    <string name="today">Today</string>
    <string name="notification_title">Hurray!</string>
    <string name="notification_title_one">Credit Successful!</string>
    <string name="notification_title_two">Discount!</string>
    <string name="notification_body">Your monthly subscription for FreshyZo A-2 Cow Milk 250ml has been successfully renewed today.</string>
    <string name="notification_body_one">The amount of  ₹25 was successfully credited to your wallet.</string>
    <string name="notification_body_two">Price drop on your favorite items, SHOP NOW!</string>
    <string name="address_title">Delivering to Shankar Nagar</string>
    <string name="address_body">32/675, Ram Sagar Para, Raipur Chhattisgarh...</string>
    <string name="delete_item">Delete Item</string>
    <string name="freshyzo_ghee_butter">FreshyZo Ghee Butter</string>
    <string name="change">Change</string>
    <string name="_100_pure_desi_ghee">100% Pure Desi Ghee</string>
    <string name="itemPrice">₹300.00</string>
    <string name="delivery_by_today_5_pm">Delivered Today</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="sample_item_size">500 gm</string>
    <string name="cart_total">Cart Total</string>
    <string name="total_price">₹380</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="place_order">Place Order</string>
    <string name="subscribe_button">Subscribe Button</string>
    <string name="add_to_cart_button">Add To Cart Button</string>
    <string name="welcome_user">Welcome, %s!</string>
    <string name="orders_icon">orders icon</string>
    <string name="my_orders">My Orders</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="profile">Profile</string>
    <string name="payments_and_wallet">Payments and Wallet</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="language">Language</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="address">Address</string>
    <string name="add_new_address_button">Add new address button</string>
    <string name="no_addresses_found">No addresses found</string>
    <string name="add">Add</string>
    <string name="sample_name_one">Manali Sharma</string>
    <string name="sample_address">Opposite SBI, 288, Sadar Bazar Road, beside Central Book, Sadar Bazar, Raipur, Chhattisgarh 492001</string>
    <string name="default_string">Default</string>
    <string name="sample_delivery">\Delivered, 15th May</string>
    <string name="address_description">Add new address field</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sample_first_name">John</string>
    <string name="sample_last_name">Smith</string>
    <string name="phone_number">Phone Number</string>
    <string name="sample_phone_num">+91 7987615010</string>
    <string name="email">Email Address</string>
    <string name="sample_email">johnsmith@example.com</string>
    <string name="submit">Submit</string>
    <string name="edit">EDIT</string>
    <string name="back_button">Back Button</string>
    <string name="subscription">Subscription</string>
    <string name="date">Date</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="select_quantity">Select quantity</string>
    <string name="morning">Morning</string>
    <string name="zero">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="monday">MON</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="select_week_days_title">Select Week Days</string>
    <string name="days">Days</string>
    <string name="add_delivery_days_title">Add Delivery Days</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="select_end_date">Select End Date</string>
    <string name="optional">\ (Optional)</string>
    <string name="required">(Required)</string>
    <string name="rupees_symbol">₹</string>
    <string name="initial_wallet_balance">" 0.00"</string>
    <string name="recharge">Recharge</string>
    <string name="products">Products</string>
    <string name="bread">Bread</string>
    <string name="active">Active</string>
    <string name="paused">Paused</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="area">Area</string>
    <string name="sample_start_date">19/06/2024</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="everyday">Everyday</string>
    <string name="resume">Resume</string>
    <string name="pause_date">Pause Date</string>
    <string name="pause_subscription">Pause subscription?</string>
    <string name="browse_your_order_history">Browse your order history</string>
    <string name="check_and_manage_subscriptions">Check and manage subscriptions</string>
    <string name="manage_your_wallet">Manage your wallet</string>
    <string name="manage_and_update_your_profile">Manage and update your profile</string>
    <string name="manage_your_saved_addresses">Manage your saved addresses</string>
    <string name="browse_coupons_earn_points">Browse coupons, earn points</string>
    <string name="manage_your_language_preferences">Manage your language preferences</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy</string>
    <string name="return_policy">Return</string>
    <string name="app_version">App Version 1.0.0</string>
    <string name="get_to_know_us">Get to know us</string>
    <string name="forward">Forward</string>
    <string name="total_products">9 products</string>
    <string name="all">All</string>
    <string name="all_products_newline">All\nProducts</string>
    <string name="end_of_results">End of results</string>
    <string name="back_to_top">Back To Top</string>
    <string name="wallet">Wallet</string>
    <string name="sample_date_time_string">2024.07.24 01:23</string>
    <string name="all_notifications">All Notifications</string>
    <string name="mark_undelivered">Mark Undelivered</string>
    <string name="remark">Remark</string>
    <string name="delivered">Delivered</string>
    <string name="size">Size: %s</string>
</resources>