<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.LoginFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/FreshyZo"
        android:padding="14dp"
        android:src="@drawable/logo_freshyzo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/off_white"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:paddingVertical="32dp">

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="phone"
            android:background="@drawable/custom_edittext_background"
            android:hint="@string/phoneHint"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="14dp"
            android:textColor="@color/heading"
            android:textColorHint="@color/disabled"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/otpInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:autofillHints="OTP"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/otpHint"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:padding="14dp"
                android:textColor="@color/heading"
                android:textColorHint="@color/disabled"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/getOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/getOTP"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/getOTP"
                android:textColor="@color/primary"
                android:textSize="15sp"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_small_rounded_corner_primary"
            android:clickable="true"
            android:contentDescription="@string/loginButton"
            android:focusable="true"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="40dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/off_white"
            android:textSize="14sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/no_account"
                android:textColor="@color/heading"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/signUpInstead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/signup"
                android:textColor="@color/primary"
                android:textSize="14sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>