<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment"
    android:background="@drawable/cow_two">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alert"
        android:alpha="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="130dp"
        android:paddingBottom="500dp"
        android:paddingHorizontal="32dp"
        android:gravity="center_horizontal">

        <ImageView
            android:src="@drawable/logo_freshyzo"
            android:contentDescription="@string/FreshyZo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom = "true"
        app:cardCornerRadius="48dp"
        android:layout_marginBottom="-30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/off_white"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingVertical="32dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="32sp"
                android:textColor="@color/heading"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fill_details"
                android:textColor="@color/text_gray"
                android:fontFamily="@font/roboto_regular"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="phone"
                android:background="@drawable/custom_edittext_background"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="14dp"
                android:textColor="@color/heading"
                android:textColorHint="@color/disabled"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

                <EditText
                    android:id="@+id/otpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="OTP"
                    android:background="@drawable/custom_edittext_background"
                    android:hint="@string/otpHint"
                    android:inputType="numberPassword"
                    android:maxLength="6"
                    android:padding="14dp"
                    android:textColor="@color/heading"
                    android:textColorHint="@color/disabled"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck" />


            <TextView
                android:id="@+id/getOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/getOTP"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/getOTP"
                android:textColor="@color/primary"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="28dp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_rounded_corner_dark"
                android:clickable="true"
                android:contentDescription="@string/loginButton"
                android:focusable="true"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/off_white"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="28dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/no_account"
                    android:textColor="@color/heading"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/signUpInstead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/signup"
                    android:textColor="@color/primary"
                    android:textSize="14sp"/>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="56dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>