<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    tools:context=".login.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/FreshyZo"
            android:padding="14dp"
            android:src="@drawable/logo_freshyzo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/off_white"
            android:orientation="vertical"
            android:paddingHorizontal="60dp"
            android:paddingVertical="32dp">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext_border"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:textSize="15sp"
                android:textColor="@color/heading_black"
                android:textColorHint="@color/disabled"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="phone"
                android:background="@drawable/custom_edittext_border"
                android:hint="@string/phoneHint"
                android:inputType="phone"
                android:padding="14dp"
                android:textSize="15sp"
                android:textColor="@color/heading_black"
                android:textColorHint="@color/disabled"
                tools:ignore="TextContrastCheck" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/otpInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:autofillHints="OTP"
                    android:background="@drawable/custom_edittext_border"
                    android:hint="@string/otpHint"
                    android:inputType="numberPassword"
                    android:padding="14dp"
                    android:textSize="15sp"
                    android:textColor="@color/secondary"
                    android:textColorHint="@color/disabled"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/getOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/getOTP"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/getOTP"
                    android:textColor="@color/secondary"
                    android:textSize="15sp"
                    tools:ignore="RelativeOverlap,TextContrastCheck" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="32dp" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_rounded_corner"
                android:clickable="true"
                android:contentDescription="@string/signupButton"
                android:focusable="true"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="40dp"
                android:paddingVertical="12dp"
                android:text="@string/signup"
                android:textSize="14sp"
                android:textAllCaps="false"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="24dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/have_account"
                    android:textColor="@color/heading_black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/loginInstead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/login"
                    android:textColor="@color/secondary"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>