<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/background"
    android:layout_marginHorizontal="12dp"
    android:layout_marginTop="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingHorizontal="8dp"
        android:paddingVertical="24dp">

        <LinearLayout
            android:id="@+id/address_Title_Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingVertical="6dp"
                android:text="@string/sample_name_one"
                android:textColor="@color/body"
                android:textSize="18sp" />

            <Button
                android:layout_width="70dp"
                android:layout_height="24dp"
                android:background="@drawable/custom_transparent_round_btn_disabled"
                android:fontFamily="@font/roboto_medium"
                android:includeFontPadding="false"
                android:text="@string/default_string"
                android:textAllCaps="false"
                android:textColor="@color/disabled" />

        </LinearLayout>

        <ImageView
            android:id="@+id/deleteAddressRow"
            android:src="@drawable/icon_delete"
            android:contentDescription="@string/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/address_body_block"
            android:layout_width="355dp"
            android:layout_height="65dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sample_address"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_Title_Layout" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>